# -

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  color.launch.py  package.xml  pick.cpp  recognize_hands  recognize_hands.py  recognize_hands_2.py
crane_x7_gazebo/: CMakeLists.txt  README.md  package.xml
crane_x7_gazebo/launch/: crane_x7_with_colorbox.launch.py
crane_x7_gazebo/worlds/: table.sdf
launch/: camera_picking.launch.py  itudemo_sazae.launch.py  sazaesann.launch.py
src/: .color_detection.cpp.swp  color_detection.cpp  color_selector.cpp  hand_pose_detection.py  pick_and_move_tf.cpp
